--- a/weblearn/5.16.md
+++ b/weblearn/5.16.md
@@ -124,6 +124,8 @@ for in遍历的是数组的索引（键名）
 
 for of 遍历的只是数组内的元素，不包括数组的原型属性method和索引name。
 
+一个for of 循环每次迭代后都会返回一个形式为[key, value]的数组。
+
 
 
 可以通过`app4.todos.push({})`去添加一个新的列表内容。
