--- a/weblearn/5.18.md
+++ b/weblearn/5.18.md
@@ -4,6 +4,18 @@
 
 #### 1.箭头函数：
 
+==函数声明尽量使用箭头函数的方式==
+
+> 绝大多数情况下都可以用=> 代替function来声明函数。
+>
+> =>函数的作用已经完全包围了function，并且this指向清晰。
+>
+> vue react里 this是一个高频使用的model。
+>
+> vue里就出现了一种=>代替不了function的情况： 在声明data和生命周期函数中如：mounted，created等的情况下，依然要用function或函数名+()的方式来声明函数。
+>
+> （这个跟vue作者尤雨溪当年在google angular项目组的一个bug有关，他在这里规避掉了箭头函数声明的情况）
+
 - 更简短的函数并且不绑定`this`
 
 ```js
@@ -125,3 +137,26 @@ var p = new Person();
 
 #### 3.v-once指令：
 
+只渲染元素和组件一次, 这可以用优化更新性vue里就出现了一种=>代替不了function的情况： 在声明data和生命周期函数中如：mounted，created等的情况下，依然要用function或函数名+()的方式来声明函数能. 执行一次性地插值，当数据改变时，插值处的内容不会更新。
+
+
+
+
+
+#### 4.v-html：
+
+`v-html="url"`这个指令的意思就是，要你用`html`的形式去显示`url`这个字符串，比如：
+
+```html
+<h2 v-html="url"></h2>
+//前面省略
+data:{
+	url:'<a href="http://www.bilibili.com">这里是哔哩哔哩</a>'
+}
+```
+
+
+
+#### 5.v-text:
+
+它跟mustache语法很相似{{message}}，但是它没有mustache灵活，所以一般是不用的。
