--- a/weblearn/5.20.md
+++ b/weblearn/5.20.md
@@ -26,7 +26,33 @@
 
 ==待补充==
 
+补充：
 
+> 在vue中，有时候你修改了数组的某一项值或索引时，视图并未如你想的那样发生变化，虽然你修改了数组但是视图上显示的还是未修改时的值。
+
+```js
+//由于 JavaScript 的限制，Vue 不能检测以下变动的数组：
+//（1）当你利用索引直接设置一个项时，例如：
+vm.items[indexOfItem] = newValue
+//（2）当你修改数组的长度时，例如：
+vm.items.length = newLength
+```
+
+官方的解决方案：
+
+```js
+// Vue.set
+Vue.set(vm.items, indexOfItem, newValue)
+
+// Array.prototype.splice
+vm.items.splice(indexOfItem, 1, newValue)
+```
+
+> 基本解决办法是： this.$set(obj, 'a', 'xxx')
+>
+> 如果是在watch中，观察变量值val的话，就是 val: {handler: ()=>{xxx}, deep: true }
+>
+> 通过设置deep:true的方式
 
 #### 4.v-for可以接受整数：
 
@@ -43,7 +69,8 @@
 
 ```js
 const nums = [10,20,111,222,333,444];
-let newNums = nums.filter(function (n){
+//let newNums = nums.filter(function (n){
+let newNums = nums.filter((n)=>{
 return n <100
 })
 ```
@@ -57,7 +84,8 @@ return n <100
 #### 6.map()函数：
 
 ```js
-let new2Nums = newNums.map(function(n){
+//let new2Nums = newNums.map(function(n){
+let new2Nums = newNums.map((n)=>{
 return n*2;
 })
 ```
@@ -69,7 +97,8 @@ return n*2;
 #### 7.reduce()函数：
 
 ```js
-ler new3Nums = newNums.reduce(function(preValue,n){
+//ler new3Nums = newNums.reduce(function(preValue,n){
+ler new3Nums = newNums.reduce((preValue,n)=>{
 	return preValue + n;
 },0)
 ```
