--- a/weblearn/5.21.md
+++ b/weblearn/5.21.md
@@ -4,11 +4,153 @@
 
 （1）创建组件构造器对象：
 
-```
+```js
 const cpnC = Vue.extend({
-	template:`
-	<
-	`
+			//template:组件自定义的模板。
+            template: "<div>\n" +
+                "                <h2>我是标题</h2>\n" +
+                "                <p>我是内容1</p>\n" +
+                "                <p>我是内容2</p>\n" +
+                "            </div>"
+        })
+```
+
+（2）注册组件
+
+```js
+Vue.component('my-cpn',cpnC)
+```
+
+（3）实例化Vue
+
+```js
+const app = new Vue({
+            el:'#app',
+            data:{
+
+            }
+        })
+```
+
+
+
+#### 2.模板的分离写法：
+
+- #### script标签
+
+  ```html
+  <script type="text/x-template" id="cpn">
+      <div>
+          <h2>我是标题</h2>
+      </div>
+  </script>
+  ```
+
+  ```js
+  //直接注册全局组件，创建构造器的过程有上面替代，利用script的方法
+  Vue.component('my-cpn',{
+              template:"#cpn"
+          })
+  ```
+
+- #### template标签
+
+  ```html
+  <template id="cpn">
+          <div>
+              <h2>我也是标题</h2>
+          </div>
+  </template>
+  ```
+
+  ```js
+  //直接注册全局组件，创建构造器的过程有上面替代，利用template的方法
+  Vue.component('my-cpn',{
+              template:"#cpn"
+          })
+  ```
+
+
+
+#### 3.组件不能访问Vue实例中的data：
+
+组件有自己的data
+
+
+
+#### 4.组件中data必须是函数：
+
+```js
+Vue.component("cpn",{
+	template:'#cpn',
+	data(){
+		return {
+			counter:0
+		}
+	}
 })
+```
+
+data函数返回值是一个对象，每次实例化一个组件，这个组件就会返回一个独立的对象，各个组件互不影响
+
+```js
+//如果data只是简单的是一个值或者一个对象的话
+data:{
+	message:'name'
+}
+```
+
+对该组件的修改会影响到其他组件，这肯定不行啊。
+
+所以data不是函数的话会直接报错，就不给你这个机会。
+
+
+
+#### 5.父子传参
+
+```js
+const cpn = {
+    template:'#cpn',
+    props:{
+
+    },
+    data(){
+        return {}
+    },
+    methods:{
+        
+    }
+}
+
+const app = new Vue({
+    el:app,
+    data:{
+        message:'你好'
+    },
+    components:{
+        cpn
+    }
+})
+```
+
+props:的几种写法：
+
+```js
+//数组
+props:['cmovies','cmessage']
+```
+
+```
+//对象
+props:{
+	//1.类型限制：
+	cmovies:Array,
+	cmessage:String,
+	//2.提供默认值：
+	vmessage:{
+		type:String,
+		default:'aaaa',
+	}
+}
 ```
 
