--- a/weblearn/5.21.md
+++ b/weblearn/5.21.md
@@ -108,29 +108,55 @@ data:{
 
 #### 5.父子传参
 
-```js
-const cpn = {
-    template:'#cpn',
-    props:{
+- 首先要在父组件上面定义要传递的参数，比如本例的message（定义在data里面）
+- 子组件定义，利用`<template>`模板将子组件进行定义，在props属性中，定义用于==接收父组件参数==的==子组件参数==
+- 在components中，将子组件的名称写上去，说明关系，这个组件是父组件的子组件
+- 此时，在子组件中，就可以使用父组件中的参数了（data中的内容）
+- 使用的时候需要在子组件的实例中，声明子组件参数与父组件参数的对应关系`:cmessage='message'`必须要添加`v-bind:`指令进行绑定
 
-    },
-    data(){
-        return {}
-    },
-    methods:{
-        
+```html
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+<div id="app">
+    <cpn :cmovies="movies" :cmessage="message"></cpn>
+</div>
+<template id="cpn">
+    <div>
+        <!--        子元素中有父元素的值，这就是父传子-->
+        <p>{{cmovies}}</p>
+        <h2>{{cmessage}}</h2>
+    </div>
+</template>
+<script src="vue.js"></script>
+<script>
+    const cpn = {
+        template: "#cpn",
+        props: ['cmovies', 'cmessage'],
+        data() {
+            return {}
+        }
     }
-}
-
-const app = new Vue({
-    el:app,
-    data:{
-        message:'你好'
-    },
-    components:{
-        cpn
-    }
-})
+    const app = new Vue({
+        el: '#app',
+        data: {
+            message: '你好',
+            movies: ['海王', '海贼王']
+        },
+        components: {
+            cpn
+        }
+    })
+</script>
+</body>
+</html>
 ```
 
 props:的几种写法：
@@ -152,5 +178,35 @@ props:{
 		default:'aaaa',
 	}
 }
+```
+
+```js
+//带有默认值的对象
+props:{
+	type:object,
+	default(){
+		return {message:'hello'}
+	}
+}
+//自定义验证函数
+props:{
+	validator(value){
+		return ['success','warning','danger'].indexOf(value) !== -1
+	}
+
+}
+```
+
+```js
+//自定义类型
+person(firstName,lastName)=>{
+	this.firstName = firstName
+	this.lastName = lastName
+}
+Vue.component('blog-post',{
+    porps:{
+        author:Person
+    }
+})
 ```
 
