--- a/weblearn/5.21.md
+++ b/weblearn/5.21.md
@@ -210,3 +210,93 @@ Vue.component('blog-post',{
 })
 ```
 
+
+
+#### 6.子传父
+
+- 子传父一般是传递一个事件，然后由父组件向服务器进行请求
+
+- 首先子组件定义一个点击`@click`事件，并向事件传递一个对象参数，事件的名称是`btnclick`
+
+- 接着在子组件中的methods方法中，对`btnclick`方法进行定义`this.$emit('itemclick', item)`，他利用`this.$emit`发送一个事件，事件名称叫`itemclick`
+
+- 然后父组件中对事件进行监听，`@intemclick='cpnclick'`当监听到`itemclick`事件时，调用`cpnclick`函数。
+
+- 接着在父组件中对`cpnclick`方法进行定义，因为在监听的时候填的`@itemclick='cpnclick'`中并没有填参数，所以传递过来的是默认参数==我写的自定义事件传过来的值==
+
+  > 此处再引申一下，如果是`button`标签中的`btnclick事件不填参数的话`默认传过去的参数是`event`事件
+
+```html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<!--    父组件-->
+<div id="app">
+    <cpn @itemclick="cpnclick"></cpn>
+</div>
+<!--子组件模板-->
+<template id="cpn">
+    <div>
+        <button v-for="item in categories" @click="btnclick(item)">{{item.name}}</button>
+    </div>
+</template>
+<script src="vue.js"></script>
+<script>
+    // 子组件
+    const cpn = {
+        template: '#cpn',
+        data() {
+            return {
+                categories: [
+                    {id: 'aa', name: '热门推荐'},
+                    {id: 'bb', name: '手机数码'},
+                    {id: 'cc', name: '家用电器'},
+                    {id: 'dd', name: '电脑办公'},
+
+                ]
+            }
+        },
+        methods: {
+            btnclick(item) {
+                this.$emit('itemclick', item)
+            }
+        }
+    }
+    // 父组件
+    const app = new Vue({
+        el: '#app',
+        data: {
+            messsage: '你好'
+
+        },
+        components: {
+            cpn
+        },
+        methods: {
+            cpnclick(item) {
+                console.log('cpnclick', item);
+            }
+        }
+    })
+</script>
+</body>
+</html>
+```
+
+
+
+#### 7.用户输入：
+
+input监听用户输入的事件：`@input`，其默认传入的值是event，获取用户输入的内容：`envent.target.value`
+
+
+
+#### 8.访问子组件：
+
+通过`$refs`，具体用法就是在子组件中添加`refs='aaa'`属性
+
+`$refs`是对象类型，默认是一个空的对象
