--- a/weblearn/5.22.md
+++ b/weblearn/5.22.md
@@ -1,8 +1,10 @@
 ## 5.22
 
-#### Vue CLI目录：
+#### 1.Vue CLI目录：
 
 <img src="C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210522211919075.png" alt="image-20210522211919075" style="zoom:67%;" />
+
+![image-20210522213941356](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210522213941356.png)
 
 hello						//项目名
 
@@ -23,3 +25,13 @@ hello						//项目名
 ​		-App.vue				//项目中的根组件【重点】
 
 ​		-main.js					//项目中的主入口【重点】
+
+
+
+#### 2.在main.js中，开头
+
+`import Vue from 'Vue'`	//从node_modules中引入vue.js文件，应该就是以前不用脚手架的时候`<script scr='vue.js'>`中的内容是一样的效果。
+
+`import App from './App'` //引入自定义的组件，就是那个App.vue 十分显眼
+
+`import router from './router'` //引入路由
