--- a/weblearn/5.26.md
+++ b/weblearn/5.26.md
@@ -57,7 +57,9 @@ checkId(arr1,arr2){
 
 > forEach()方法对数组的每个元素执行一次给定的函数
 
-其中最常使用的就是用`forEach()`方法去替代`for`循环（以后能不用for就不用for (´；ω；`) 
+==注意：forEach()并不能使用return和break进行中断，想要性能就别用他。。==
+
+~~其中最常使用的就是用`forEach()`方法去替代`for`循环（以后能不用for就不用for (´；ω；`)~~ 
 
 下面是示例
 
