--- a/weblearn/5.28.md
+++ b/weblearn/5.28.md
@@ -60,6 +60,16 @@ date('1','2','3','4','5')
 
 #### 5.扩展运算符：
 
+...	可以将某些数据结构转化为数组：
+
+```js
+let arr = [1, 2, 3, 4, 5, 6, 4, 3, 2, 1];
+let arr2 = [4, 5, 6, 5, 6];
+let result = [...new Set(arr)];
+```
+
+此时result就是一个数组
+
 "..."扩展运算符能将'数组'转换为逗号分隔的'参数序列'
 
 ```js
