--- a/weblearn/项目问题/知乎日报.md
+++ b/weblearn/项目问题/知乎日报.md
@@ -36,3 +36,73 @@
 #### 5.页面详情
 
 - 1.首先需要在
+
+
+
+```
+<div class="before" v-for="item in beforeStories" :key="item.id">
+      <content-item
+        :imgUrl="item.images"
+        :title="item.title"
+        :hint="item.hint"
+      ></content-item>
+      <!-- </div> -->
+    </div>
+```
+
+```
+<div class="before" v-for="item in beforeData" :key="item.id">
+      <!-- <button @click="click(item, index)"></button> -->
+      <el-divider content-position="left">
+        <content-item
+          :imgUrl="item.stories[0].images"
+          :title="item.title"
+          :hint="item.hint"
+        ></content-item>
+      </el-divider>
+    </div>
+```
+
+![image-20210721190614511](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210721190614511.png)
+
+![image-20210721190656607](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210721190656607.png)
+
+
+
+## 项目改进
+
+#### 1.模板字符串：
+
+```js
+return `${month}月${day}日`;
+```
+
+利用mustach语法
+
+#### 2.async函数：
+
+```js
+async created() {
+    const res = await axios({
+      url: "/api/3/stories/latest",
+    });
+    if (res?.data?.stories) {
+      this.stories = res.data.stories;
+      this.date = res.data.date;
+    }
+    // axios({
+    //   url: "/api/3/stories/latest",
+    // }).then((res) => {
+    //   this.stories = res.data.stories;
+    //   this.date = res.data.date;
+    // });
+  },
+```
+
+利用`async`函数，可以将很难看的异步操作，变为好看的类似同步操作的异步操作。。看着像同步实则不是
+
+#### 3.CLI-service配置：
+
+![image-20210727121932378](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210727121932378.png)
+
+可以用rewrite方法重写，方便修改
