--- a/weblearn/数据库/数据库知识点.md
+++ b/weblearn/数据库/数据库知识点.md
@@ -75,11 +75,11 @@ ALTER TABLE user MODIFY updateTime TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE
 
 INSERT INTO user (name,telPhone) VALUES ('lucy', '000-11231231')
 
-![image-20210818213423794](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210818213423794.png)
+![image-20210818213423794](../../img/image-20210818213423794.png)
 
 ![image-20210818213440917](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210818213440917.png)
 
-![image-20210818213533830](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210818213533830.png)
+![image-20210818213533830](../../img/image-20210818213533830.png)
 
 #### 6.添加外键约束
 
