--- a/weblearn/项目问题/前后端交互问题.md
+++ b/weblearn/项目问题/前后端交互问题.md
@@ -32,7 +32,7 @@ dist目录来源：前端的文件输入`npm run build`进行打包就会出现d
 
 是行不通的
 
-![image-20210815205334779](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210815205334779.png)
+![image-20210815205334779](../../img/image-20210815205334779.png)
 
 就算你在项目中设置请求3000端口，例如：
 
@@ -58,7 +58,7 @@ const res = await axios.get({
 
 错误的信息是：
 
-![image-20210815231224330](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210815231224330.png)
+![image-20210815231224330](../../img/image-20210815231224330.png)
 
 我把代码重新改了改，因为发现他后面跟的是一个对象，我就想到，是不是get请求后面{}的问题，我就将它改成了字符串
 
