--- a/weblearn/项目问题/知乎日报.md
+++ b/weblearn/项目问题/知乎日报.md
@@ -63,9 +63,9 @@
     </div>
 ```
 
-![image-20210721190614511](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210721190614511.png)
+![image-20210721190614511](../../img/image-20210721190614511.png)
 
-![image-20210721190656607](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210721190656607.png)
+![image-20210721190656607](../../img/image-20210721190656607.png)
 
 
 
@@ -103,6 +103,6 @@ async created() {
 
 #### 3.CLI-service配置：
 
-![image-20210727121932378](C:\Users\gjm\AppData\Roaming\Typora\typora-user-images\image-20210727121932378.png)
+![image-20210727121932378](../../img/image-20210727121932378.png)
 
 可以用rewrite方法重写，方便修改
