--- a/weblearn/算法/刷题总结.md
+++ b/weblearn/算法/刷题总结.md
@@ -7,3 +7,41 @@
 如果快指针比慢指针快几位，那么，当快指针遍历结束时，慢指针的位置也就是所求的位置。
 
 如果快指针速度是慢指针两倍，也就是快指针走两步，慢指针走一步，那么快指针遍历结束时，慢指针正好达到链表中点
+
+#### 2.排列组合：全排列
+
+```js
+var permute = function (nums) {
+  let res = [];
+  let vis = {};
+  let dfs = (t) => {
+    if (t.length == nums.length) {
+      res.push(t);
+    }
+    for (let i = 0; i < nums.length; i++) {
+      
+      if (vis[i]) continue;
+      vis[i] = true;
+      t.push(nums[i]);
+      // 对t进行深拷贝
+      dfs(t.slice(0));
+      t.pop();
+      vis[i] = false;
+    }
+  }
+  dfs([]);
+  return res;
+};
+
+```
+
+#### 3.数组去重
+
+```js
+let arr1 = [1, 2, 1, 3, 1];
+let arr2 = [];
+arr1.forEach(function (self, index, arr) {
+    arr.indexOf(self) === index ? arr2.push(self) : null;
+});
+```
+
