--- a/weblearn/面试/实际面试.md
+++ b/weblearn/面试/实际面试.md
@@ -1,8 +1,22 @@
-不会的点
+> ## 面试考点总结
 
-#### 1.什么时候用到数组，什么时候用到对象
+#### 1.什么时候用到数组，什么时候用到对象（数组跟对象的区别）
 
-#### 数组跟对象的区别
+说一下我自己的理解，因为数组也是继承于对象的prototype，所以对象可以是用的方法和属性，数组同样可以使用就比如`Array.prototype.__proto__ === Object.prototype) // true`。可以理解为数组是一个更加严格的对象，
+
+- 数组的下标值为`0,1,2,3`，只能这种1,2,3的String类型，而对象中的下标值可以是`Number,String,Symbel`等类型的值
+- 数组访问属性的时候，需要通过`[]`数组方式进行访问，而对象访问属性的时候可以通过`. || []`方式进行访问
+
+其中用`.`访问的属性名称为标识符，标识符和变量名的区别就是，标识符必须是通过代码写死的，在编译的时候通过硬编码写死，才可以用`.`进行访问。举个栗子
+
+```js
+function foo(test){
+	person.test = 1; // 错误
+	person[test] = 1; //正确
+}
+```
+
+简而言之就是，需要我们把变量名通过代码敲出来的，才可以用`.`进行访问，如果是通过接收一个参数，去动态的添加变量名的，那就只能用`[]`进行访问
 
 #### 如何判断是不是对象（判断数组的方式）
 
@@ -28,9 +42,7 @@
 
 #### vue单向数据流
 
-#### vue的组件通讯
-
-#### vue父子组件传递信息
+比如vue通过父组件向子组件中传递一个参数，子组件只需要通过一个props接收就可以，而子组件向父组件传参的时候，就需要通过`$emit`去发出一个事件，然后父组件再去监听这个时间，使用回调进行接收数据
 
 #### vuex和localStorage的区别
 
@@ -70,7 +82,7 @@
 
 - 对于vue框架的跨域，可以通过cli-serve设置代理接口跨域，也是我使用最多的
 
-#### 为什么使用vue，vue有什么有点
+#### 为什么使用vue，vue有什么有特点
 
 #### ajax
 
@@ -145,7 +157,7 @@ vue为每个属性都通过object.defineProperty()实行数据劫持，然后为
 - 首先data不能是一个对象，因为对象是引用类型，组件会被多个实例进行引用，这样会导致多个实例共享一个对象
 - 在js中，函数有自己的作用域，通过return返回对象的拷贝，每次创建一个实例，就相当于为实例data开辟一个单独的内存空间，这样组件间就没有相互影响。对于这种特性，在对于可以复用的函数，为了避免多次进行创建，一般都是通过定义在原型上面，这样就可以实现对函数的复用
 
-#### 框架之前的区别，vue的优势在哪里
+#### 框架之间的区别，vue的优势在哪里
 
 #### promise之前的异步实现，三大状态
 
@@ -265,3 +277,85 @@ bfc
 宏任务中有：setTimeout,setInterval,IO事件,setImmediate,close事件
 
 微任务有：Promise的then的回调，process.nextTick，queueMicrotask
+
+#### onclick和addEventListener区别
+
+- onclick在同一时间只能指向唯一对象
+- addEventListener可以给一个事件注册多个listener
+- addEventListener对任何dom都是有效的，而onclick仅限于html
+- addEventListener可以控制listener的触发阶段，比如事件冒泡和事件捕获
+
+#### js几种数据类型检测方法
+
+- typeof
+- instanceof
+- constructor
+- Object.prototype.toString.call()
+
+#### common js 和es6
+
+- commonJs输出的是一个值得拷贝，而es6输出的是值的引用
+- commonJs是运行时加载，es6是编译时输出接口
+- commonJs的require语法是同步的，所以commanJs的模块规范只适合用在服务端，而es6模块在浏览器端和服务端都是可以是用的
+
+#### flex布局
+
+flex-direction决定主轴的方向
+
+flex-wrap决定如何换行
+
+flex-flow方向和换行的简写
+
+justify-content主轴的对齐方式：左对齐start右对齐end中间对齐center两边对齐space-between等间隔对齐space-around
+
+align-items属性定义项目如何在交叉轴上对齐
+
+start上对齐,end下对齐，center中间对齐，如果项目未设置高度，默认将占满整个容器
+
+align-content上一个是每个项目，这个是相当于整体容器
+
+项目属性
+
+order定义项目的排列顺序
+
+#### js为什么是单线程
+
+js对于浏览器脚本语言来说，主要是用途是与用户进行交互，以及操作dom，如果是多线程的话，一个线程在某个节点上添加内容，另一个线程删除了这个节点，这时候浏览器该以哪个线程为主呢
+
+对于任务的话，一种是同步任务，另一种是异步任务，对于同步任务，在主线程排队的任务，只有前一个任务完毕，才能执行后一个任务
+
+#### computed和watch
+
+computed默认会缓存计算结果，只要依赖数据不发生改变，就会直接取出缓存中的计算结果
+
+watch主要是用来监听某些特定数据的变化，watch支持异步，不支持缓存，监听的数据改变额的时候，会触发相应的操作
+
+#### 内存泄漏问题
+
+关于ao为什么不会被销毁，因为对于闭包来说，在闭包函数创建的时候，就会确定对父级作用域AO的一个引用，所以，内存清理机制就不会对其进行回收
+
+这里需要提一下内存回收，GC的循环实现来说，从跟对象进行查找，如果到达不了的对象，就会被回收，尽管可能会出现循环引用的情况
+
+但是这个闭包机制也会导致会出现内存泄漏，此时，如果把不需要的引用给置为null，就可以解决了
+
+#### 跨域问题
+
+#### 前端性能
+
+#### session
+
+#### cookie
+
+#### let const块级作用域
+
+#### 模板字符串
+
+#### promise.all
+
+#### 如何实现图片懒加载
+
+#### 浏览器缓存
+
+#### css动态效果
+
+#### es6基本语法
