--- a/weblearn/面试/面试问题汇总.md
+++ b/weblearn/面试/面试问题汇总.md
@@ -103,5 +103,14 @@ function shallowCopy(obj1, obj2) {
 
   Object.assign()把任意多个源对象的可枚举属性拷贝给目标对象
 
+  #### 6.cookie和token的区别
   
+  因为http是无状态的协议，每个请求都是完全独立的，服务端不会保存任何会话信息，此时如果想分辨请求发送者和上一个是不是同一个人，那么就需要主动维护一个状态去告之两个请求是否来自于同一个浏览器
+  
+  #### 7.如何只能通过服务端设置cookie
+  
+  通过对cookie设置httpOnly
+  
+  #### 8.undefined和null的区别
 
+#### 9.
