--- a/work/项目问题.md
+++ b/work/项目问题.md
@@ -29,3 +29,11 @@
 336 ![image-20221012091711102](../img/image-20221012091711102.png)
 
 这个踢出标识是干嘛的
+
+#### 6.扫码支付埋点
+
+`window.IfSdkApiHelper.onEvent(params)`中ifsdkapihelper是什么？
+
+二维码如何实现扫了之后退出的
+
+埋点是干嘛的
