--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -163,3 +163,35 @@ const onLoad = async (isAdd = true) => {
 `git stash`将自己的代码存到暂存区，此时就可以方便去`git pull`拉取别人的代码
 
 拉去后通过`git stash pop`将代码取出，之后进行修改冲突
+
+#### 7. :last-child
+
+last-child是选择的相较于父元素的最后一个子元素，也就是同级元素。这里面会有坑，比如有一个需求是需要为除了最后一个列表项加上一个底边框。此时列表的容器为`container`，列表项为`for`循环生成的，样式为`list-item`，此时如果要选中最后一个`list-item`，这时候需要通过`.list-item:last-child`来选中最后一个，而不能通过`container :last-child`来获取，注：上面的类似下图效果
+
+![image-20221111102211144](../img/image-20221111102211144.png)
+
+看着是差别不大，但实际上选中的东西效果完全不一样。所以`last-child`是进行同级的选中，选择同级的最后一个，告别父元素的思想。
+
+#### 8. keep-alive 和 onActived
+
+如果希望某个组件保持原来的状态和数据，此时可以使用keep-alive，此时不会再次返回该页面的时候组件不会被销毁，也就是说组件不会重新请求数据。与其对应的`onActived`钩子函数只能在keep-alive包裹的组件中使用。当组件激活的时候就会进行回调。此时就可以使用它进行一些特有的数据更新，请求数据。
+
+使用方法：可通过app.vue对keep-alive进行数组式绑定
+
+```vue
+<keep-alive :include="['HomePage','Search']">
+	<component :is="Component" />
+</keep-alive>
+```
+
+之后通过额外的 `script`标签将实例进行应用
+
+```vue
+<script lang="ts">
+import { defineComponent } from "vue";
+export default defineComponent({
+  name: "Search", //用于keep-alive缓存
+});
+</script>
+```
+
