--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -195,3 +195,144 @@ export default defineComponent({
 </script>
 ```
 
+#### 9. element ui dialog lable 无法右对齐
+
+将label-width 设为auto，label就会自适应标签的长度，但会默认右对齐(此时使用label-position="left"也无法改变对其方式) 详见：[element ui表单el-form的label自适应宽度并左对齐](https://blog.csdn.net/weixin_43711639/article/details/120871114)
+
+#### 10.vant 轮播图无法自动轮播
+
+在挂载的时候通过手动调用官方提供的实例方法resizse()进行手动触发重绘
+
+#### 11.样式穿透
+
+vue3中可以使用`:deep(.el-drawer__header){}`选中组件的样式进行修改样式
+
+vue2中使用`::deep .el-drawer__header {}`选中组件的样式进行修改样式
+
+#### 12. vue2 ts中使用 ref
+
+以使用element ui 的el-input为例：
+
+在vue2中使用ts跟原生的操作方法类似，区别就是需要指定ref的类型
+
+`import { ElInput } from 'element-ui/types/input';`
+
+此时的场景是
+
+<img src="../img/image-20221118111611008.png" alt="image-20221118111611008" style="zoom: 67%;" />
+
+`await nextTick(()=> {(this.$refs.inputRefas ElInput).focus();});`
+
+通过nextTick避免 出现undefine的错误
+
+#### 13.vue2 中从data中渲染图片
+
+有时候需要从data中渲染出本地图片，此时可以通过
+
+```js
+{
+      label: '用户数',
+      url: require('@/assets/operationStatistics/icon_user.png'),
+      count: 30358
+},
+```
+
+通过require进行导入图片
+
+#### 14. vue3 vite中从data中渲染图片
+
+在vue3中没有 `require`，可以通过vite提供的方法进行渲染图片
+
+```js
+{
+    name: "测验任务",
+    icon: new URL("../../assets/home/icon_task.png", import.meta.url).href,
+},
+```
+
+其中url路径必须是上述路径，不可以是`@/`，识别不出来，详情见 [官方文档](https://cn.vitejs.dev/guide/assets.html)
+
+#### 15. 输入框中禁用空格
+
+`v-model.trim` 这是v-model的修饰符之一
+
+- [`.lazy`](https://cn.vuejs.org/guide/essentials/forms.html#lazy) ——监听 `change` 事件而不是 `input`
+- [`.number`](https://cn.vuejs.org/guide/essentials/forms.html#number) ——将输入的合法符串转为数字
+- [`.trim`](https://cn.vuejs.org/guide/essentials/forms.html#trim) ——移除输入内容两端空格
+
+#### 16. input只能输入中文
+
+```vue
+<el-input
+	type="text"
+	v-model="setKeyValue"
+	ref="inputRef"
+	@keyup.enter.native="handleSaveKey(scope.row)"
+	:maxlength="4"
+	@input="handleInputValue"
+/>
+```
+
+核心的是`@input处理`handleInputValue
+
+```js
+handleInputValue(value) {
+    value = value.replace(/[^\u4e00-\u9fa5]/g, '');
+    this.setKeyValue = value;
+}
+```
+
+另有其他输入的正则： [input限制输入正则大全](https://blog.csdn.net/weixin_61570458/article/details/127573090?spm=1001.2101.3001.6650.1&utm_medium=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127573090-blog-124410737.pc_relevant_3mothn_strategy_and_data_recovery&depth_1-utm_source=distribute.pc_relevant.none-task-blog-2%7Edefault%7EAD_ESQUERY%7Eyljh-1-127573090-blog-124410737.pc_relevant_3mothn_strategy_and_data_recovery&utm_relevant_index=2)
+
+#### 17. 下拉框选中的题型高亮
+
+<img src="../img/image-20221125171741374.png" alt="image-20221125171741374" style="zoom: 50%;" />
+
+比如有如上需求，此时可以通过动态绑定class 来将选中的项目进行高亮展示
+
+```vue
+<div
+     class="question-type-item"
+     @click="handleTypeItemClick(index)"
+     :class="{ activeItem: queryObj.questionTypeId === index }"
+     >
+    {{ questionTypeObj[index] }}
+</div>
+```
+
+此时通过比较选中的项的index与当前vfor渲染的index
+
+#### 18. withDefaults()中传入对象{}
+
+例如：
+
+```ts
+interface Props {
+  courseList: {
+    courseCover: string,
+    courseName: string,
+  }
+}
+const props = withDefaults(defineProps<Props>(), {
+  courseList : () => ({
+    courseCover:  '',
+    courseName: '空'
+  })
+})
+```
+
+此时需要传入箭头函数，此时必须要加入`()`，不然对象的`{}`会与箭头函数返回的包裹`{}`冲突
+
+#### 19. 纯文本内容保持原有换行
+
+此时可以使用`<pre/>`标签空白会被浏览器保留，此时pre中的内容会保留原有的换行，但是超过长度不会进行自动换行，此时
+
+添加样式：
+
+```css
+pre {
+white-space: pre-wrap;
+word-wrap: break-word;
+}
+```
+
