--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -336,3 +336,108 @@ word-wrap: break-word;
 }
 ```
 
+#### 20. 获取ref的type
+
+```ts
+const learnListRef1 = $ref<typeof LearningList>()
+```
+
+#### 21. 项目中使用icon
+
+- 使用iconfont的icon方案
+
+  ```html
+  <icon-font iconName="icon_pack_up_kc" /> // 指定iconName 为项目中的icon名
+  ```
+
+- 使用组件库的icon方案
+
+- 下载icon，svg图片
+
+  ```html
+  <svg-icon class="icon" name="icon_pf_star" /> // 指定name为svg的名字
+  ```
+
+#### 22. 谷歌浏览器排坑
+
+- api.now is not a function 重启谷歌浏览器 
+
+#### 23. 懒加载的坑
+
+懒加载组件可能会触发多次触底事件，原因为
+
+- 请求的数据渲染的高度不够，没法填满整个屏幕
+- loading，设为true的时候表示正在加载，此时不会触发触底事件，当数据渲染之后需要手动将其设置为false，所以如果会多次触发触底事件，说明可能是==设为false==的loading放在了渲染数据之前，导致会多次渲染，此时可以可以将loading置为false的操作放在==nextTick()==之后。
+
+#### 24.  vue mixins的使用
+
+ 以分页组件为例，如果要使用mixins，首先需要定义一个接口类型，该接口包括了混入预计希望的字段与方法，例：
+
+```ts
+export interface ITablePagination {
+  tableData: Array<any>;
+  page: {
+    pageNo: number;
+    pageSize: number;
+    total: number;
+  };
+  onSizeChange: Function;
+  onCurrentChange: Function;
+  pageTableIndex: Function;
+}
+```
+
+此时定义了两个字段和三个方法，接着就需要在另一个ts文件中去实现这个接口。
+
+```ts
+import { pageTableIndex } from '@/utils/common';
+import { Component, Vue } from 'vue-property-decorator';
+import Pagination from '@/components/pagination/index.vue';
+import { ITablePagination } from '@/interface/pagination';
+@Component({
+  name: 'PageTable',
+  components: {
+    Pagination
+  }
+})
+export class PageTable extends Vue implements ITablePagination {
+  tableData = [];
+  page = {
+    pageNo: 1,
+    pageSize: 10,
+    total: 0
+  };
+  onSizeChange(v) {
+    this.page.pageNo = 1;
+    this.page.pageSize = v;
+    this.onSearch();
+  }
+  onCurrentChange(v) {
+    this.page.pageNo = v;
+    this.onSearch();
+  }
+  pageTableIndex(v) {
+    const { pageNo, pageSize } = this.page;
+    return pageTableIndex(pageNo, pageSize, v);
+  }
+  onSearch() {}
+}
+```
+
+这里面多一个额外的onSearch方法，因为接口的实现是可以多写但是不能少写
+
+接着就是使用该mixins,在父组件中引入该js，之后可以按照正常方式使用组件、在mixins中定义的字段和方法会绑定在vue的实例上（this），如果父组件定义了与mixins相同命名的字段，字段值以父组件的，mixins的值不会覆盖。例：
+
+```vue
+import { PageTable } from '@/mixins/Pagination';
+<pagination
+        class="mt20"
+        :current-page="page.pageNo"
+        :page-size="page.pageSize"
+        :total="page.total"
+        @size-change="onSizeChange"
+        @current-change="onCurrentChange"
+></pagination>
+export default class TableCourse extends Mixins(PageTable) {}
+```
+
