--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -430,6 +430,7 @@ export class PageTable extends Vue implements ITablePagination {
 
 ```vue
 import { PageTable } from '@/mixins/Pagination';
+import { Component, Mixins } from 'vue-property-decorator';
 <pagination
         class="mt20"
         :current-page="page.pageNo"
