feat: 文件下载、对象数组去重、删除数组中指定对象、vue2{{}}的坑 2022.12.8

--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -442,3 +442,50 @@ import { Component, Mixins } from 'vue-property-decorator';
 export default class TableCourse extends Mixins(PageTable) {}
 ```
 
+#### 25. 文件下载
+
+- 通过调接口接收到字节流
+- 通过Blob对象，将字节流转化为Blob二进制
+- 通过`URL.createObjectURL(blob)`生成下载链接
+- 动态生成a标签，绑定该下载地址，调用点击事件进行下载
+
+#### 26. 对象数组去重
+
+```js
+/**
+   * @description: 对象数组去重
+   * @param {*} arr 去重对象
+   * @param {*} uniId 根据什么去重
+   * @return {*}
+  */
+
+  uniqueFunc(arr, uniId) {
+    const res = new Map();
+    return arr.filter(item => !res.has(item[uniId]) && res.set(item[uniId], 1));
+}
+```
+
+原文：[js对象数组去重的三种方法](https://juejin.cn/post/6984625612937773070)
+
+#### 27. 删除数组中指定对象
+
+```js
+let index = arr.indexOf(arr.filter((item) => item.id === obj.id)[0]);
+arr.splice(index, 1);
+```
+
+原文：[js 数组内删除某个对象（或确定该对象索引值）](https://blog.csdn.net/qq_42543244/article/details/122281545)
+
+#### 28. vue2 中 {{ }} 中使用 import 的方法
+
+import 的方法需要在实例中进行引用，比如
+
+```js
+dateFormatter = dateFormatter; // vue2+ts
+// vue2+js
+methods: {
+    dateFormatter,
+}
+
+```
+
