feat: css排列方案、el-cascader的坑、css超出宽度展示...

--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -489,3 +489,29 @@ methods: {
 
 ```
 
+#### 29. 卡片css排列方案
+
+有的需求是需要一行排列4个卡片，此时就不能对每个卡片设置padding值，此时可以使用
+
+```css
+&:nth-child(4n+1){
+}
+```
+
+对所有卡片设置边距，然后清除4为倍数的卡片边距即可
+
+#### 30. v-show 与 el-cascader 的坑
+
+v-show每次展示的时候都会触发cascader的change事件，同时会清除cascader绑定的值
+
+而v-if就不会，原因是el-cascader的问题，重新渲染组件可以解决。所以不能使用v-show，或者绑定key，当key改变的时候，该组件就会重新渲染。
+
+#### 31. css设定超出宽度展示...
+
+```css
+widht: 100px;
+overflow: hidden;
+text-overflow: ellipsis;
+white-space: nowrap;
+```
+
