feat: ckeditor使用、列表固定间距、slot-scope 2022.12.16

--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -515,3 +515,99 @@ text-overflow: ellipsis;
 white-space: nowrap;
 ```
 
+#### 32. ckeditor5使用方法
+
+1. 选择目前需要的编辑器类型，目前可选择的有五种：
+
+   - Classic editor（经典类型）
+
+   - Inline editor（行内）
+
+   - Balloon editor（浮动展示）
+
+   - Ballon block editor（浮动块级展示）
+
+   - Document editor（文档类型）
+
+2. 下载ckeditor5构建文件
+
+   - 预定义方式，可扩展性差，仅做例子展示使用
+   - Online builder 在线构建器，通过使用直观的ui来选择需要的功能，之后打包成zip文件下载，此时需要从五种编辑器类型中选择其一。
+   - zip download 下载，没用过
+
+3. 使用Online builder 选择需要的功能之后下载
+
+   - 以第二步选择 Classic editor（经典类型）为例，安装 CKEditor5 WYSIYG 编辑组件和当前的编辑器构建工具
+
+     ```npm
+     npm install --save @ckeditor/ckeditor5-vue2 @ckeditor/ckeditor5-build-classic
+     ```
+
+   - 使用ES6 modules 
+
+     ```js
+     // main.js
+     import CKEditor from '@ckeditor/ckeditor5-vue2';
+     Vue.use( CKEditor );
+     ```
+
+   - 使用组件
+
+     ```vue
+     <template>
+         <div id="app">
+             <ckeditor :editor="editor" v-model="editorData" :config="editorConfig"></ckeditor>
+         </div>
+     </template>
+     
+     <script>
+         import ClassicEditor from '@ckeditor/ckeditor5-build-classic';
+     
+         export default {
+             name: 'app',
+             data() {
+                 return {
+                     editor: ClassicEditor,
+                     editorData: '<p>Content of the editor.</p>',
+                     editorConfig: {
+                         // The configuration of the editor.
+                     }
+                 };
+             }
+         }
+     </script>
+     ```
+
+     
+
+#### 33. ckeditor4 增加音频
+
+基本流程与ckeditor5类似，不需要对ckeditorConfig做其他的配置就可以正常使用
+
+如果希望音频插件可以使用文件上传则需要提供文件上传地址
+
+> By default CKEditor does not include a file browser or uploader. The "Browse server" and "Upload" tabs need server side code to work so they don't appear if there is no file browser or uploader.
+
+默认上传tab页是不做显示的，如果想要显示需要有upload，进行上传，此时可以使用ckfinder，也可以直接增加属性`filebrowserUploadUrl`，指定文件上传地址。此时文件上传就会自动将文件上传到该地址，然后将url进行回显。
+
+```text
+npm i --save ect-ui@git+https://oauth2:GtxM6_QGdWiBxWx4yyy@git.iflytek.com/edu_fe_lib/ect/ect-ui.git#vue2
+```
+
+"ect-ui": "git+https://oauth2:[GtxM6_QGdWiBxWx-4yyy@git.iflytek.com](mailto:GtxM6_QGdWiBxWx-4yyy@git.iflytek.com)/edu_fe_lib/ect/ect-ui.git#v3.1.5
+
+#### 34. 列表固定间距 flex gap
+
+有很多场景，需要每个卡片在一个容器中按照间隙进行排列，此时对他们设置边距是不合理的，这种排列方式并不能自适应浏览器窗口。此时可以使用flex gap
+
+```css
+.card-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 14px;
+}
+```
+
+#### 35. slot-scope
+
+在vue2.5之前，作用域插槽是用`slot-scope`的，在vue2.6之后引入新的指令`v-slot`，同时可以简写代码`#defalut='{ scope }'`，相较于以前`slot-scope='{ scope }'`
