--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -362,7 +362,7 @@ const learnListRef1 = $ref<typeof LearningList>()
 
 - api.now is not a function 重启谷歌浏览器 
 
-#### 23. 懒加载的坑
+#### 23. 懒加载的坑(多次触底)
 
 懒加载组件可能会触发多次触底事件，原因为
 
@@ -493,6 +493,8 @@ methods: {
 
 有的需求是需要一行排列4个卡片，此时就不能对每个卡片设置padding值，此时可以使用
 
+##### ==该方案已废除！详情实现见34.列表固定间距==
+
 ```css
 &:nth-child(4n+1){
 }
@@ -605,3 +607,164 @@ white-space: nowrap;
 #### 35. slot-scope
 
 在vue2.5之前，作用域插槽是用`slot-scope`的，在vue2.6之后引入新的指令`v-slot`，同时可以简写代码`#defalut='{ scope }'`，相较于以前`slot-scope='{ scope }'`
+
+#### 36. 搜索关键词高亮
+
+预期效果如图：<img src="../img/image-20221219113844500.png" alt="image-20221219113844500" style="zoom:33%;" />
+
+该效果的实现思路是通过正则表达式检索出关键词，之后将关键词替换为带有颜色的span标签，之后通过`v-html`
+
+进行渲染
+
+首先设置v-html
+
+```vue
+<h4 class="main-title" v-html="courseTilte" ></h4>
+```
+
+字体高亮函数
+
+```ts
+/**
+ * @description: 字体高亮显示
+ * @param {string} result 包含关键词的内容
+ * @param {string} keyword 关键词
+ * @return {*}
+ */
+export const useBrightenKeyword = (result:string, keyword:string) =>{
+  const Reg = new RegExp(keyword, 'i')
+  let res = '';
+  if (result) {
+    res = result.replace(Reg, `<span style="color: #38BBA9;">${keyword}</span>`)
+    return res
+  }
+}
+```
+
+请求到结果之后对关键词内容进行处理
+
+```ts
+resultList.data.forEach((element:any) => {
+    element.courseName = useBrightenKeyword(element.courseName, inputValue)
+});
+```
+
+#### 37. el pagination 个数选择器重置
+
+在dialog的 分页组件，dialog被关闭的时候不会被销毁，所以里面的数据都会被保留，此时只能通过手动进行重置，但是el-pagination 是无法手动去改变个数选择器的，所以只能通过修改`key`的方式，让该组件重新渲染。
+
+比如在dialog关闭的时候触发回调`handleCloseDialog`
+
+```ts
+handleCloseDialog() {
+    this.studentTableData = [];
+    this.pageNo = 1;
+    this.pageSize = 10;
+    // 改变key值
+    this.dialogKey = new Date().getTime();
+    }
+```
+
+#### 38. div实现聚焦失焦
+
+使用场景：手写的input下拉框，因为div没有聚焦`focus`失焦`blur`事件，所以需要进行设置
+
+实现效果：<img src="../img/image-20221223101931107.png" alt="image-20221223101931107" style="zoom:33%;" />
+
+- 首先select框是通过v-if进行显示隐藏的通过判断`isShowCascader`的值，对select框容器添加`tabindex='0'`即可让该容器获得聚焦失焦的效果
+
+  ```vue
+  <div
+       class="cascader-container"
+       v-if="isShowCascader"
+       @click="handleClick"
+       >
+      <div
+           class="cascader-switch"
+           @focus="handleFocus"
+           @blur="handleBlur"
+           tabindex="0"
+           ref="cascaderContainerRef"
+           >
+            <span>包含下层机构</span>
+            <el-switch
+              v-model="switchValue"
+              active-color="#24c2b9"
+              inactive-color="#d6d6d6"
+            >
+            </el-switch>
+          </div>
+          <el-cascader-panel
+            :options="businessOptions"
+            @change="handleCascaderChange"
+            ref="cascaderRef"
+            :props="businessProps"
+            v-model="cascaderChoose"
+          >
+            <template slot-scope="{ data }">
+              <Ellipsis
+                class="tooltips-container"
+                :wordsMax="9"
+                :text="data.label"
+              />
+  
+              <!-- {{ data.label }} -->
+            </template>
+      </el-cascader-panel>
+  </div>
+  ```
+
+- 通过watch，当select框展示的时候就绑定`focus`，进行手动聚焦
+
+  ```ts
+  @Watch('isShowCascader') handleCascaderBlur() {
+      if (this.isShowCascader) {
+        this.$nextTick(() => {
+          console.log('绑定focus');
+          (this.$refs.cascaderContainerRef as HTMLInputElement).focus();
+        });
+        console.log('this.siw');
+      }
+    }
+  ```
+
+- 因为预料外的原因，暂时把focus绑定在了开关上，因为绑定在父级容器上，聚焦还是只能聚焦在开关上（原因未知），所以此时点击下面的select框的时候会触发失焦，失焦就会隐藏select框，此时需要对失焦事件进行一些边界判断
+
+  ```ts
+  handleBlur() {
+      setTimeout(() => {
+        const targetArr = [
+          'el-cascader-node__label',
+          'el-scrollbar__view el-cascader-menu__list'
+        ];
+        if (!targetArr.includes(this.currentTargetName)) {
+          this.$nextTick(() => {
+            this.isShowCascader = false;
+          });
+        } else {
+          this.$nextTick(() => {
+            (this.$refs.cascaderContainerRef as HTMLInputElement).focus();
+          });
+        }
+  
+        this.currentTargetName = '';
+      }, 150);
+    }
+  ```
+
+  select框使用了饿了么ui的级联选择器，此时通过在父容器绑定点击事件，获取到点击的target对象，对对象进行排除判断，不能点击到select框的选项也失焦。这里面使用了一个==setTimeout==方法，因为会优先触发`blur`事件，然后才会触发`click`事件，所以需要进行延时保证click事件触发成功。==延时时间根据每个电脑原因可能各不相同==
+
+- 增加边界判断，如果点击到select框阻止隐藏
+
+  ```js
+  handleClick(target) {
+      const targetName =
+        target.path[0].className == ''
+          ? target.path[2].className
+          : target.path[0].className;
+      console.log('click', targetName);
+      this.currentTargetName = targetName;
+    }
+  ```
+
+  通过增加targetName来为blur事件回调判断点击事件究竟点击到了哪里，找到容器target的共同点通过className进行判断
