feat: 历史笔记更新2023.8.23

--- a/work/小技巧.md
+++ b/work/小技巧.md
@@ -1567,3 +1567,268 @@ let ua = navigator.userAgent.toLowerCase();
 　　}
 ```
 
+#### 77. 交换两个变量的值
+
+```javascript
+let x = 1;
+let y = 2;
+[x, y] = [y, x];
+```
+
+#### 78. El-date-picker格式化日期，当日0点-当日24点
+
+在@change的时候绑定该事件，项目代码检索码：`格式化时间-formartTime`（可通过该字段检索到代码实现）
+
+```
+handleSelectTime([start, end]) {
+    // 开始时间需要为当日的0点，结束时间为当日的23:59:59
+    const startTime = start + ' 00:00:00';
+
+    console.log('开始时间', startTime);
+    const endtime = end + ' 23:59:59';
+    if (endtime <= startTime) {
+      this.$message.warning('开始时间不能晚于结束时间');
+      return;
+    }
+    console.log('结束时间', endtime);
+    this.searchInfo.beginDate = new Date(startTime).getTime();
+    this.searchInfo.endDate = new Date(endtime).getTime();
+  }
+```
+
+#### 79. Css 滚动条不贴边
+
+如果想要滚动条不贴边，需要包三层div
+
+第一层：需要设置高度和overflow:scroll，此时才会有滚动条
+
+第二层：设置居中，表单一般都是居中的
+
+第三层：设置真正的容器，宽度内容等等，此时滚动条就不会贴着表单
+
+```
+.page {
+  height: calc(100vh - #{$header-height} - #{$crumb-height} - 24px - 80px);
+  overflow: scroll;
+}
+.page-container {
+  display: flex;
+  justify-content: center;
+}
+.form-container {
+  width: 1200px;
+  padding-bottom: 160px;
+}
+```
+
+![image-20230627111537479](../img/image-20230627111537479.png)
+
+#### 80. 手写钩子函数
+
+钩子函数通常应用在类中，列举一个场景：在一个组件中要去new一个文件上传类，通过类进行读取文件信息，每当读取进度有更新，就会通知到组件去更新信息
+
+此时就需要在类中注册一个钩子函数，每当进度更新，就会触发这个钩子函数
+
+之所以不在类中进行钩子函数的实现是因为这个对进度的操作是可变化的，工具类应该具有通用性
+
+此时可以按照步骤：
+
+1、类中定义钩子函数
+
+2、类中根据特定条件触发钩子函数，通过判断钩子函数是否实现`（Object.prototype.toString.call()=== [object Function]）`
+
+3、在组件中实例化该类
+
+4、在组件中注册钩子函数（重写钩子函数）
+
+5、等待触发钩子函数
+
+以下是自己代码实现：
+
+组件中：
+
+```ts
+const beforeUpload = async (file: File) => {
+  console.log('before-upload');
+  // 首先注册钩子函数
+  uploader.onProgressUpdate = (progress: any) => {
+    console.log('进度',progress);
+  }
+  const res = await uploader.getHashByFile(file);
+  console.log('md5',res);
+  // uploader.uploadFile(file)
+  return false;
+}
+```
+
+类中：
+
+```ts
+export default class FileUploader {
+  private maxThreads: number;
+  private chunkSize: number;
+  private token: string;
+  private prepareUrl: string;
+  private completeUrl: string;
+  private enableChunking: boolean;
+
+  public onProgressUpdate: Function | undefined = undefined;
+
+  constructor(options: UploadOptions) {
+    this.maxThreads = options.maxThreads;
+    this.chunkSize = options.chunkSize;
+    this.token = options.token;
+    this.prepareUrl = options.baseUrl + "/upload/file/storage/prepare";
+    this.completeUrl = options.baseUrl + "/upload/file/storage/complete";
+    this.enableChunking = options.enableChunking;
+  }
+
+  getHashByFile(file: File) {
+    return new Promise((resolve, reject) => {
+      let fileReader = new FileReader();
+
+      // 1.读取文件，并得到一个ArrayBuffer的对象文件数据
+      fileReader.readAsArrayBuffer(file);
+
+      // 2.文件读取完成回调函数
+      fileReader.onload = (e) => {
+        const buffer = e.target?.result as ArrayBuffer;
+        spark.append(buffer);
+
+        // 唯一标识
+        const HASH = spark.end();
+        resolve(HASH);
+      };
+
+      // 2.文件读取进度回调函数
+      fileReader.onprogress = (e) => {
+        const progress = (e.loaded / file.size) * 100;
+        // 此处判断钩子函数是否进行注册
+        if(this.onProgressUpdate && Object.prototype.toString.call(this.onProgressUpdate) === "[object Function]") {
+          this.onProgressUpdate(progress);
+        }
+      };
+    });
+  }
+}
+```
+
+#### 81.el-form深层次校验
+
+El-form-item里的prop需要prop="monitorSetting.cycle",校验的rules也为'monitorSetting.cycle'
+
+#### 82.pre自动换行
+
+```css
+pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+```
+
+#### 83.虚线分割线
+
+```html
+<div class="row-divider"></div>
+```
+
+```css
+.row-divider {
+  width: 1200px;
+  border-top: 1px dashed #d9d9d9;
+  height: 0;
+}
+```
+
+#### 84.路由跳转报错navigation canceled...
+
+vue-router - Navigation cancelled from "/" to "/password" with a new navigation
+
+类似这种报错
+
+最简便的方式就是在this.$router.push()后加入.catch(() => {})不能是.catch()
+
+也就是`this.$router.push().catch(()=> {}) `
+
+#### 85.scss文件嵌套样式或者变量等失效
+
+将`@import url("../styles/upload.scss");`改为`@import "../styles/upload.scss";`
+
+#### 86.proxy代理处理数据变化拦截
+
+需求：有个开关e-switch，开启之前进行弹窗提醒
+
+```
+  /**
+   * @description: 增加代理，代理自动激活属性，在该值修改之前进行拦截
+   * @return {*}
+   */  
+  proxy = new Proxy(this.isOpenAutoActivateParams, this.getAutoActivateHandler())
+
+getAutoActivateHandler() {
+    return {
+      get: Reflect.get,
+      set: (target, property, value) => {
+        const updateTarget = () => {
+          let fn = value ? this.showOpenPopUp() : this.showClosePopUp();
+          fn.then(() => {
+            target[property] = value;
+          }).catch(() => {
+            target[property] = value ? 0 : 1;
+          });
+        };
+        if (
+          property === 'isOpenAutoActivate'
+        ) {
+          updateTarget();
+        } else {
+          target[property] = value;
+        }
+        return true;
+      }
+    };
+  }
+```
+
+#### 87. El-image预览增加下载
+
+```js
+async handlePreview(cert,i) {
+        (this.$refs[`cert${cert.certificateHolderId}${i}`] as any)[0].clickHandler();
+        await this.$nextTick();
+        const wrapper = document.getElementsByClassName('el-image-viewer__actions__inner');
+        const downImage = document.createElement('i');
+        downImage.setAttribute('class', 'el-icon-download');
+        const wrapperElem = wrapper[0];
+        wrapperElem.appendChild(downImage);
+        if(wrapperElem) {
+            downImage.addEventListener('click', async() => {
+                this.handleDownload(cert)
+            });
+        }
+    }
+    async handleDownload(cert) {
+        this.$loading['show']();
+        const { certificateName } = cert;
+        try {
+            this.$loading['hide']();
+            downloadFileByUrl(cert.certificateDownloaUrl, `${certificateName}.jpg`);
+        } catch(e) {
+            this.$loading['hide']();
+        }
+    }
+```
+
+#### 88. 数组换行显示
+
+这是
+
+换行
+
+显示
+
+```js
+const arr = ['这是'，'换行','显示']；
+arr.join('/n');
+```
+
